I've made some overall improvements and I have extended the Window class and I also implemented some basic window effects.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SimpleJSGui</title>
+    <title>SimpleJSGui - Example on how to properly embed this engine into a Web page</title>
     <link rel="stylesheet" href="build/style.css">
     <script src="engine/_panel-item.js"></script>
     <script src="engine/_panel.js"></script>
