I've implemented the basic context menus for the panel items.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>SimpleJSGui - Example on how to properly embed this engine into a Web page</title>
     <link rel="stylesheet" href="build/style.css">
-    <script src="engine/_panel-item.js"></script>
-    <script src="engine/_panel.js"></script>
-    <script src="engine/_window.js"></script>
+    <script src="engine/panel-item-contextmenu.js"></script>
+    <script src="engine/panel-item.js"></script>
+    <script src="engine/panel.js"></script>
+    <script src="engine/window.js"></script>
 </head>
 <body>
     <script src="simplejsgui.js"></script>
