--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>SimpleJSGui - Example on how to properly embed this engine into a Web page</title>
     <link rel="stylesheet" href="build/style.css">
+    <script src="engine/panel-item-clock.js"></script>
     <script src="engine/panel-item-contextmenu.js"></script>
     <script src="engine/panel-item.js"></script>
     <script src="engine/panel.js"></script>
