--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="engine/panel-item-clock.js"></script>
     <script src="engine/panel-item-contextmenu.js"></script>
     <script src="engine/panel-item.js"></script>
+    <script src="engine/desktop.js"></script>
     <script src="engine/panel.js"></script>
     <script src="engine/window.js"></script>
 </head>
