The panel, task-bar and line switcher seem to work fine for the moment. I began to experiment on icons-only panel item mode.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>SimpleJSGui - Example on how to properly embed this engine into a Web page</title>
     <link rel="stylesheet" href="build/style.css">
-    <script src="engine/panel-item-clock.js"></script>
+    <script src="engine/task-bar.js"></script>
+    <script src="engine/panel-menu.js"></script>
+    <script src="engine/panel-clock.js"></script>
     <script src="engine/panel-item-contextmenu.js"></script>
     <script src="engine/panel-item.js"></script>
     <script src="engine/desktop.js"></script>
