--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SimpleJSGui - Example on how to properly embed this engine into a Web page</title>
+    <title>SimpleJSGui</title>
     <link rel="stylesheet" href="build/style.css">
+    <script src="engine/desktop.js"></script>
+    <script src="engine/system.js"></script>
     <script src="engine/task-bar.js"></script>
     <script src="engine/panel-menu.js"></script>
     <script src="engine/panel-clock.js"></script>
     <script src="engine/panel-item-contextmenu.js"></script>
     <script src="engine/panel-item.js"></script>
-    <script src="engine/desktop.js"></script>
     <script src="engine/panel.js"></script>
     <script src="engine/window.js"></script>
 </head>
