I implemented the basic overlay, which is rendered to the screen when the width of the document viewport is too small to fit the necessary components of SimpleJSGui.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>SimpleJSGui</title>
     <link rel="stylesheet" href="build/style.css">
     <script src="engine/desktop.js"></script>
+    <script src="engine/overlay.js"></script>
     <script src="engine/system.js"></script>
     <script src="engine/task-bar.js"></script>
     <script src="engine/panel-menu.js"></script>
