--- a/index.html
+++ b/index.html
@@ -4,18 +4,9 @@
     <meta charset="UTF-8">
     <title>SimpleJSGui</title>
     <link rel="stylesheet" href="build/style.css">
-    <script src="engine/desktop.js"></script>
-    <script src="engine/overlay.js"></script>
-    <script src="engine/system.js"></script>
-    <script src="engine/task-bar.js"></script>
-    <script src="engine/panel-menu.js"></script>
-    <script src="engine/panel-clock.js"></script>
-    <script src="engine/panel-item-contextmenu.js"></script>
-    <script src="engine/panel-item.js"></script>
-    <script src="engine/panel.js"></script>
-    <script src="engine/window.js"></script>
 </head>
 <body>
+    <script src="SimpleJSGui/bundle.js"></script>
     <script src="simplejsgui.js"></script>
 </body>
 </html>
