Dropdown menus can now be nested.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>SimpleJSGui</title>
+    <title>SimpleJSGuiLite</title>
     <link rel="stylesheet" href="build/style.css">
 </head>
 <body>
